--- a/style.css
+++ b/style.css
@@ -353,5 +353,5 @@ body {
 }
 
 .patient-details-tile:hover {
-    background-color: #83d9ae; /* Optional: Slightly darker shade on hover */
+   ** background-color: #83d9ae; /* Optional: Slightly darker shade on hover */
 }
