--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ body {
 
 /* Styling for the Patient Details Tile */
 .patient-details-tile {
-    background-color: #93E9BE; /* Optional: Different color for distinction */
+   ** background-color: #93E9BE; /* Optional: Different color for distinction */
     color: #fff; /* Optional: White text for contrast */
 }
 
